--- a/website/html/wallets.html
+++ b/website/html/wallets.html
@@ -1,12 +1,5 @@
 {{ define "wallets_page" }}
 <script defer type="module" src="/static/js/wallets.js"></script>
-<div id="loading-spinner"
-     class="absolute inset-0 flex items-center justify-center hidden">
-    <div
-         class="aspect-square animate-spin rounded-full border-2 border-gray-800 border-b-transparent">
-    </div>
-</div>
-
 <div class="w-full pt-5 pb-20 text-gray-800">
     <div class="max-w-[800px] w-full mx-auto px-4">
         <header class="w-full">
@@ -57,7 +50,6 @@
 {{ define "wallets_count" }}
 <span id="wallets-count">{{ . }}</span>
 {{ end }}
-
 <!-- TODO: group by network -->
 {{ define "wallet" }}
 <li class="w-full border border-gray-200 rounded-lg relative isolate"
@@ -81,42 +73,9 @@
             </div>
 
             <div class="flex gap-2">
-                {{ if or (eq .Status "queued") (eq .Status "in_progress") }}
-                <form class="size-8" method="PUT" action="/wallets">
-                    <input class="hidden" type="text" value="{{ .Id }}"
-                           name="id" />
-                    <input class="hidden" type="text" value="cancel_scheduled"
-                           name="status" />
-                    <button class="size-8 rounded-lg hover:bg-gray-200"
-                            data-spinner="w-4">
-                        <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg"
-                             fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                  d="M6 18 18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </form>
-                {{ else }}
-                <form class="size-8" method="PUT" action="/wallets">
-                    <input class="hidden" type="text" value="{{ .Id }}"
-                           name="id" />
-                    <input class="hidden" type="text" value="queued"
-                           name="status" />
-                    <button class="size-8 rounded-lg hover:bg-gray-200 disabled:text-gray-400 disabled:hover:bg-inherit"
-                            data-spinner="w-4"
-                            {{ if eq .Status "cancel_scheduled" }} disabled
-                            {{ end }}>
-                        <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg"
-                             fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                  d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                        </svg>
-                    </button>
-                </form>
-                {{ end }}
+                {{ template "wallet_fetch_button" . }}
 
+                <!-- Delete button -->
                 <form class="size-8" method="delete"
                       action="/wallets?id={{ .Id }}"
                       data-sse-unsubscribe="/wallets/sse?id={{ .Id }}"
@@ -131,6 +90,8 @@
                         </svg>
                     </button>
                 </form>
+
+                <!-- Expand button -->
                 <button class="size-8 rounded-lg hover:bg-gray-200 min-[470px]:hidden"
                         data-wallet-table-expand="{{ .Id }}">
                     <svg class="p-1.5 transition-all"
@@ -185,8 +146,40 @@
 </li>
 {{ end }}
 
+{{ define "wallet_fetch_button" }}
+{{ if or (eq .Status "queued") (eq .Status "in_progress") }}
+<form id="wallet-fetch-btn-{{ .Id }}" class="size-8" method="PUT"
+      action="/wallets">
+    <input class="hidden" type="text" value="{{ .Id }}" name="id" />
+    <input class="hidden" type="text" value="canceled" name="status" />
+    <button class="size-8 rounded-lg hover:bg-gray-200" data-spinner="w-4">
+        <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg" fill="none"
+             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M6 18 18 6M6 6l12 12" />
+        </svg>
+    </button>
+</form>
+{{ else }}
+<form class="size-8" method="PUT" action="/wallets">
+    <input class="hidden" type="text" value="{{ .Id }}" name="id" />
+    <input class="hidden" type="text" value="queued" name="status" />
+    <button class="size-8 rounded-lg hover:bg-gray-200 disabled:text-gray-400 disabled:hover:bg-inherit"
+            data-spinner="w-4" {{ if eq .Status "cancel_scheduled" }} disabled
+            {{ end }}>
+        <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg" fill="none"
+             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+        </svg>
+    </button>
+</form>
+{{ end }}
+{{ end }}
+
 {{ define "wallet_status" }}
-<div class="flex items-center justify-center gap-1 text-gray-600">
+<div id="wallet-status-{{ .Id }}"
+     class="flex items-center justify-center gap-1 text-gray-600">
     {{ if eq .Status "queued" }}
     <div
          class="size-3 border-2 border-gray-400 border-b-transparent rounded-full animate-spin">
@@ -198,10 +191,8 @@
     </div>
     <span class="text-sm leading-none hidden min-[470px]:inline">Syncing</span>
     {{ else if eq .Status "success" }}
-    <svg class="size-4" xmlns="http://www.w3.org/2000/svg" fill="none"
-         viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round"
-              d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
+    <svg class="size-4">
+        {{ template "icon" "checkmark" }}
     </svg>
     <span class="text-sm leading-none hidden min-[470px]:inline">Synced</span>
     {{ else if eq .Status "error" }}
