--- a/website/html/wallets.html
+++ b/website/html/wallets.html
@@ -1,30 +1,28 @@
 {{ define "wallets_page" }}
 <script defer type="module" src="/static/js/wallets.js"></script>
-<div class="w-full pt-5 pb-20 text-gray-800">
-    <div class="max-w-[800px] w-full mx-auto px-4">
-        <header class="w-full">
-            <h1 class="font-semibold text-2xl">Add wallet</h1>
-        </header>
+<div class="max-w-[800px] w-full mx-auto px-4 pt-5 pb-20 text-gray-800">
+    <header class="w-full">
+        <h1 class="font-semibold text-2xl">Add wallet</h1>
+    </header>
 
-        <form method="POST" action="/wallets"
-              class="w-full mt-8 flex flex-col items-end gap-4">
-            <input type="text" required id="wallet_address"
-                   name="wallet_address" placeholder="Wallet address"
-                   class="w-full h-10 px-4 border border-gray-200 rounded-lg" />
-            <select id="network" name="network" required
-                    class="w-full h-10 px-4 border border-gray-200 rounded-lg">
-                <option value="" selected disabled>Choose a network</option>
-                <option value="0">Solana</option>
-                <option value="3">Arbitrum</option>
-            </select>
-            <button type="submit" data-spinner
-                    class="h-10 w-fit aspect-[5/2] bg-gray-200 rounded-lg hover:bg-gray-300 disabled:text-gray-400 disabled:bg-gray-200">
-                Add
-            </button>
-        </form>
+    <form method="POST" action="/wallets"
+          class="w-full mt-8 flex flex-col items-end gap-4">
+        <input type="text" required id="wallet_address" name="wallet_address"
+               placeholder="Wallet address"
+               class="w-full h-10 px-4 border border-gray-200 rounded-lg" />
+        <select id="network" name="network" required
+                class="w-full h-10 px-4 border border-gray-200 rounded-lg">
+            <option value="" selected disabled>Choose a network</option>
+            <option value="0">Solana</option>
+            <option value="3">Arbitrum</option>
+        </select>
+        <button type="submit" data-spinner
+                class="h-10 w-fit aspect-[5/2] bg-gray-200 rounded-lg hover:bg-gray-300 disabled:text-gray-400 disabled:bg-gray-200">
+            Add
+        </button>
+    </form>
 
-        {{ template "wallets" . }}
-    </div>
+    {{ template "wallets" . }}
 </div>
 {{ end }}
 
@@ -83,25 +81,14 @@
                       data-delete-on-success="wallet-{{ .Id }}">
                     <button class="size-8 text-red-600 rounded-lg hover:bg-gray-200"
                             data-spinner="w-4">
-                        <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg"
-                             fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                  d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                        </svg>
+                        {{ template "icon" "trash-bin" }}
                     </button>
                 </form>
 
                 <!-- Expand button -->
-                <button class="size-8 rounded-lg hover:bg-gray-200 min-[470px]:hidden"
+                <button class="size-8 rounded-lg hover:bg-gray-200 min-[470px]:hidden [&_svg]:transition-all"
                         data-wallet-table-expand="{{ .Id }}">
-                    <svg class="p-1.5 transition-all"
-                         xmlns="http://www.w3.org/2000/svg" fill="none"
-                         viewBox="0 0 24 24" stroke-width="1.5"
-                         stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                              d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg>
+                    {{ template "icon" "chevron-d" }}
                 </button>
             </div>
         </div>
@@ -151,11 +138,7 @@
     <input class="hidden" type="text" value="queued" name="status" />
     <button class="size-8 rounded-lg hover:bg-gray-200 disabled:text-gray-400 disabled:hover:bg-inherit"
             data-spinner="w-4" {{ if .Disabled }} disabled {{ end }}>
-        <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg" fill="none"
-             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
-        </svg>
+        {{ template "icon" "download" }}
     </button>
 </form>
 {{ end }}
@@ -174,9 +157,9 @@
     </div>
     <span class="text-sm leading-none hidden min-[470px]:inline">Syncing</span>
     {{ else if eq .Status "success" }}
-    <svg class="size-4">
+    <div class="size-7">
         {{ template "icon" "checkmark" }}
-    </svg>
+    </div>
     <span class="text-sm leading-none hidden min-[470px]:inline">Synced</span>
     {{ else if eq .Status "error" }}
     <svg class="size-4" xmlns="http://www.w3.org/2000/svg" fill="none"
